--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- to close the nav-bar -->
+    <div id="backdrop-hook"></div>
+    <!-- with React Portals I'm going to render the sideDrawer in here place -->
+    <div id="drawer-hook"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
