added some new components -Button - Modal

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
 
     <!-- to close the nav-bar -->
     <div id="backdrop-hook"></div>
+    <!-- with React Portals I'm going to render the Modal(Overlay) in here place -->
+    <div id="modal-hook"></div>
     <!-- with React Portals I'm going to render the sideDrawer in here place -->
     <div id="drawer-hook"></div>
     <div id="root"></div>
