--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Final project- IronHack"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.1.1/css/ol.css" type="text/css">
@@ -28,7 +28,7 @@
     -->
     <title>React App</title>
     <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgLmMpKCzveJf1_yuA0fUzzhy0WRChvZA"
+    src="https://maps.googleapis.com/maps/api/js?key=%GOOGLE_API_KEY%"
     async
     defer
   ></script>
